--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "pypdf>=6.6.2",
     "python-dotenv>=1.2.1",
     "python-multipart>=0.0.22",
+    "passlib[bcrypt]>=1.7.4",
+    "pyjwt>=2.8.0",
+    "bcrypt==4.0.1",
     "sqlalchemy>=2.0.46",
     "tenacity>=9.1.2",
     "uvicorn>=0.40.0",
