--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,6 @@ dependencies = [
     "langchain-text-splitters>=1.1.0",
     "langgraph-checkpoint-postgres>=3.0.4",
     "openai>=2.16.0",
-    "pgvector>=0.4.2",
     "psycopg-binary>=3.3.2",
     "pydantic-settings>=2.12.0",
     "pypdf>=6.6.2",
@@ -25,4 +24,7 @@ dependencies = [
     "sqlalchemy>=2.0.46",
     "tenacity>=9.1.2",
     "uvicorn>=0.40.0",
+    "flashrank>=0.2.10",
+    "qdrant-client>=1.16.2",
+    "fastembed>=0.7.4",
 ]
