--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: pgvector/pgvector:pg16
+    image: postgres:16
     container_name: insurance_db
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
@@ -10,6 +10,14 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+
+  qdrant:
+    image: qdrant/qdrant:latest
+    container_name: insurance_qdrant
+    ports:
+      - "6333:6333"
+    volumes:
+      - qdrant_data:/qdrant/storage
 
   #backend:
   #  build: 
@@ -36,3 +44,4 @@ services:
 
 volumes:
   db_data:
+  qdrant_data:
