--- a/frontend/insurance-copilot/angular.json
+++ b/frontend/insurance-copilot/angular.json
@@ -22,7 +22,8 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "staticwebapp.config.json"
             ],
             "styles": [
               "src/styles.css"
